# Workshop-App-Demo-Goof-C-Cpp

./: .dockerignore  .gitignore  .snyk  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  LICENSE  Makefile  QUICK-START.md  README.md  SCANNING.md  SECURITY.md  VULNERABILITIES.md  conanfile.py  conanfile.txt  sbom.json  sbom.xml  server.cpp
.github/workflows/: build.yml  snyk-security.yml
assets/: banner.txt
scripts/: download-vulnerable-deps.sh  scan-with-snyk.sh  setup.sh
terraform/: main.tf  outputs.tf  variables.tf
